update: Field Names

--- a/codbex-lead-customer-ext/customer-opportunity-generate.form
+++ b/codbex-lead-customer-ext/customer-opportunity-generate.form
@@ -12,8 +12,8 @@
         {
             "controlId": "input-number",
             "groupId": "fb-controls",
-            "id": "opportunity-amount",
-            "label": "Opportunity Amount",
+            "id": "amount",
+            "label": "Amount",
             "horizontal": false,
             "isCompact": false,
             "placeholder": "Opportunity Amount...",
@@ -26,8 +26,8 @@
         {
             "controlId": "input-select",
             "groupId": "fb-controls",
-            "id": "opportunity-currency",
-            "label": "Opportunity Currency",
+            "id": "currency",
+            "label": "Currency",
             "horizontal": false,
             "isCompact": false,
             "staticData": false,
@@ -40,12 +40,12 @@
         {
             "controlId": "input-select",
             "groupId": "fb-controls",
-            "id": "opportunity-type",
-            "label": "Opportunity Type",
+            "id": "type",
+            "label": "Type",
             "horizontal": false,
             "isCompact": false,
             "staticData": false,
-            "model": "opportunityType",
+            "model": "type",
             "options": "",
             "optionLabel": "label",
             "optionValue": "value",
@@ -54,12 +54,12 @@
         {
             "controlId": "input-select",
             "groupId": "fb-controls",
-            "id": "opportunity-priority",
-            "label": "Opportunity Priority",
+            "id": "priority",
+            "label": "Priority",
             "horizontal": false,
             "isCompact": false,
             "staticData": false,
-            "model": "opportunityPriority",
+            "model": "Priority",
             "options": "",
             "optionLabel": "label",
             "optionValue": "value",
@@ -68,12 +68,12 @@
         {
             "controlId": "input-select",
             "groupId": "fb-controls",
-            "id": "opportunity-propability",
-            "label": "Opportunity Propability",
+            "id": "propability",
+            "label": "Propability",
             "horizontal": false,
             "isCompact": false,
             "staticData": false,
-            "model": "opportunityProbability",
+            "model": "Probability",
             "options": "",
             "optionLabel": "label",
             "optionValue": "value",
